# robyn-data-validation

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
robyn_data_validation/: __init__.py  data_review.py
sample_data/: simulated_data_daily.csv  simulated_data_weekly.csv
src/robyn_data_validation/: data_review.py
tests/: test_read_data.py
